# Tauri-Sqlx-Preact-Template

./: LICENSE.md  README.md  index.html  justfile  package.json  pnpm-lock.yaml  postcss.config.cjs  vite.config.ts
src/: app.tsx  bindings.ts  main.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: lib.rs  main.rs
src-tauri/src/utils/: db.rs
src-tauri/src/utils/migrations/: 20230815154835_init.sql
src/components/: colorscheme.tsx  menu.tsx  nav.tsx
src/layout/: mainLayout.tsx
src/pages/: _404.tsx  index.tsx  services.tsx
src/styles/: index.css
