[package]
name = "oceanus-app-tauri"
version = "0.1.0"
description ="Oceanus App"
authors = ["CM-IV"]
license = "MIT"
repository = ""
edition = "2021"

[build-dependencies]
tauri-build = { version = "1.4", features = [] }

[dependencies]
tauri = { version = "1.4.1", features = [] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sqlx = { version = "0.7.1", features = ["chrono", "sqlite", "runtime-tokio-rustls"] }
chrono = { version = "0.4.26", features = ["serde"] }
thiserror = "1.0.47"
camino = "1.1.6"
dirs = "5.0.1"
specta = "1.0.5"
tauri-specta = { version = "1.0.2", features = ["typescript"] }

[features]
# this feature is used for production builds or when `devPath` points to the filesystem
# DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]

# optimize for size
[profile.release]
strip = true
lto = true
opt-level = "z"
debug = 0
overflow-checks = false
panic = "abort"
codegen-units = 1
