[package]
name = "oceanus-app-tauri"
version = "0.1.0"
description = "Oceanus App"
authors = ["CM-IV"]
license = "MIT"
repository = ""
edition = "2021"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sqlx = { version = "0.8.6", features = [
    "chrono",
    "sqlite",
    "runtime-tokio-rustls",
] }
chrono = { version = "0", features = ["serde"] }
thiserror = "2"
camino = "1"
dirs = "6"

[features]
# this feature is used for production builds or when `devPath` points to the filesystem
# DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]

# optimize for size
[profile.release]
strip = true
lto = "fat"
opt-level = "z"
debug = 0
overflow-checks = false
panic = "abort"
codegen-units = 1
